--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,12 +107,6 @@ jobs:
         run: |
           npm run type-check
 
-  codecovstartup:
-    name: Codecov Startup
-    needs: build
-    uses: codecov/gha-workflows/.github/workflows/codecov-startup.yml@v1.0.0
-    secrets: inherit
-
   runner-indexes:
     runs-on: ubuntu-latest
     name: Generate runner indexes
@@ -130,7 +124,7 @@ jobs:
 
   test:
     name: 'Test Runner #${{ matrix.runner-index }}'
-    needs: [install, codecovstartup, runner-indexes]
+    needs: [install, runner-indexes]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -181,22 +175,22 @@ jobs:
       - name: Upload to Production
         if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
         run: |
-          codecovcli do-upload -t ${{ secrets.CODECOV_ORG_TOKEN }} --fail-on-error
+          codecovcli upload-process -t ${{ secrets.CODECOV_ORG_TOKEN }} --fail-on-error
 
       - name: Upload to Staging
         if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
         run: |
-          codecovcli -u ${{ secrets.CODECOV_STAGING_URL }} do-upload -t ${{ secrets.CODECOV_ORG_TOKEN_STAGING }} --fail-on-error
+          codecovcli -u ${{ secrets.CODECOV_STAGING_URL }} upload-process -t ${{ secrets.CODECOV_ORG_TOKEN_STAGING }} --fail-on-error
 
       - name: Upload to QA
         if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
         run: |
-          codecovcli -u ${{ secrets.CODECOV_QA_URL }} do-upload -t ${{ secrets.CODECOV_QA_TOKEN }} --fail-on-error
+          codecovcli -u ${{ secrets.CODECOV_QA_URL }} upload-process -t ${{ secrets.CODECOV_QA_TOKEN }} --fail-on-error
 
       - name: Upload to Public QA
         if: ${{ !github.event.pull_request.head.repo.fork && github.repository_owner == 'codecov' }}
         run: |
-          codecovcli -u ${{ secrets.CODECOV_PUBLIC_QA_URL }} do-upload -t ${{ secrets.CODECOV_PUBLIC_QA_TOKEN }} --fail-on-error
+          codecovcli -u ${{ secrets.CODECOV_PUBLIC_QA_URL }} upload-process -t ${{ secrets.CODECOV_PUBLIC_QA_TOKEN }} --fail-on-error
 
   storybook:
     name: Run storybook
